# ewoksdraw

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: release.yml  test.yml
src/ewoksdraw/: dev_fake_workflow.py  dev_links.py  main.py
src/ewoksdraw/config/: constants.py  tasks_geometry.json
src/ewoksdraw/css_styles/: css_background.css  css_task_anchor_link.css  css_task_box.css  css_task_line.css  css_task_text_io.css  css_task_title.css
src/ewoksdraw/svg/: __init__.py  svg_background.py  svg_canvas.py  svg_element.py  svg_group.py  svg_task.py  svg_task_anchor_link.py  svg_task_box.py  svg_task_io.py  svg_task_line.py  svg_task_title.py  svg_text.py  utils_tasks.py
src/ewoksdraw/tests/: test_main.py
src/ewoksdraw/utils/: utils_tasks.py
tests/: test_main.py
