[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewoksdraw"
version = "0.0.1"
authors = [{name = "ESRF", email = "dau-pydev@esrf.fr"}]
description = "Ewoks workflow drawing"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "reportlab",
    "faker",
    "xmltodict"
]

[project.urls]
Homepage = "https://github.com/ewoks-kit/ewoksdraw/"
Documentation = "https://ewoksdraw.readthedocs.io/"
Repository = "https://github.com/ewoks-kit/ewoksdraw/"
Issues = "https://github.com/ewoks-kit/ewoksdraw/issues/"
Changelog = "https://github.com/ewoks-kit/ewoksdraw/-/blob/main/CHANGELOG.md"

[project.scripts]
ewoksdraw = "ewoksdraw.main:main"

[project.optional-dependencies]
test = [
    "pytest >=7",
]
dev = [
    "pytest >=7",
    "ruff", 
    "mypy",
]
doc = [
    "sphinx >=4.5",
    "sphinx-autodoc-typehints >=1.16",
    "pydata-sphinx-theme",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ewoksdraw = ["**/*.css", "**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.ruff]

src = ["."]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
files = "."

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=ewoksdraw --cov-report=term"